--- a/pages/cadastro/cadastro.component.html
+++ b/pages/cadastro/cadastro.component.html
@@ -5,7 +5,7 @@
 </ion-item>
 
 <ion-item>
-<ion-label >Curso:</ion label>
+<ion-label >Curso:</ion-label>
 <ion-select [(ngModel)]="curso" name ="bairro">
 <ion-option value ="Direito">Direito</ion-option>
 <ion-option value ="Sistemas para Internet">Sistemas para internet</ion-option>
